monitoring/configs/clickstack-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: clickstack-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`clickstack.macbytes.io`)
      kind: Rule
      services:
        - name: clickstack-app
          port: 3000
  tls:
    secretName: clickstack-tls-certificate
